# sonde

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.AGPL-3.0  LICENSE.Apache-2.0  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: onboard.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  dependabot-automerge.yml  publish-docker.yml  publish-pypi.yml
docs/: README.md
src/sonde/: __init__.py  __main__.py  cli.py  core.py  endpoint.py  logconfig.py  logging.py  phases.py  provider.py
src/sonde/endpoints/: __init__.py  asset_owners.py  github_stargazers.py
tests/: conftest.py  helpers.py  test_burst.py  test_burst_async.py  test_cli.py  test_core.py  test_endpoint.py  test_github.py  test_logging.py  test_phases.py  test_provider.py  test_public_api.py
