[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonde"
dynamic = ["version"]
description = "Probe any HTTP API for its rate limits, burst ceiling, and full-scrape time."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
httpx = ["httpx>=0.24"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
sonde = "sonde.cli:main"

[tool.setuptools.dynamic]
version = {attr = "sonde.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
